--- a/templates/identi.html
+++ b/templates/identi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>鑑定</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    
@@ -14,7 +14,7 @@
       
         body{
             background-color: antiquewhite;
-            display: flex
+            
         }
         .wait{
           display: none;
@@ -25,12 +25,15 @@
         #navbarNav>ul>li:hover{
             background-color: rgb(212, 186, 16);
         }
+        .sp_name{
+            font-style:italic
+        }
         
     </style>
 </head>
 
 <body>
-    <div class="container-fluid px-0 wait" >
+    <div class="container-fluid px-0 wait d-flex" >
         <div  class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-sm">
               <div class="modal-content">
@@ -85,8 +88,8 @@
                             <div class="collapse navbar-collapse m-0 pb-0 navbar-brand" id="navbarNav">
                                 <ul class="navbar-nav bg-warning  justify-content-center col-12" >
                                   <li class="nav-item"><a href="/" class="nav-link be_disable" disabled style="color:black ;">首頁</a></li>
-                                    <li class="nav-item"><a href="/upload" class="nav-link be_disable" disabled style="color:black ;">目擊目擊回報</a></li>
-                                    <li class="nav-item"><a href="/identi" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
+                                    <li class="nav-item"><a href="./upload.html" class="nav-link be_disable" disabled style="color:black ;">目擊目擊回報</a></li>
+                                    <li class="nav-item"><a href="./identification.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定</a></li>
                                     <li class="nav-item"><a href="./identification_test.html" class="nav-link be_disable" disabled  style="color:black ;">物種鑑定測驗</a></li>
                                     <li class="nav-item"><a href="./ambulance.html" class="nav-link" style="color:black ;">救傷通報</a></li>
 
@@ -104,55 +107,79 @@
            
         </div>
 
-        <div style="height: 100px;"></div>
-
-        <div class="d-flex justify-content-center">
-          <div class="mt-5 w-75 ">
-
-            <div id="carouselExampleIndicators" class="carousel slide Width 75%" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        
+        
+        
+        </div>
+        <div style="height: 150px;"></div>
+        
+        <div  class="modal fade" id="identi" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="sign_in">鑑定</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="/static/img/01.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="/static/img/02.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="/static/img/03.jpg" class="d-block w-100" alt="...">
-                  </div>
+                <div class="modal-body ">
+                   <img src="./image/01.jpg" style="object-fit: contain; width:80%; margin-left :10%;" alt="">
+                    <div class="mt-3" style="margin-left :35%">
+                    <p class="h4">初判:</p>
+                    <label class="h4" for="challenge" >鑑定:</label>
+                    <input name="challenge" id="challenge"  type="text">
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+                <div class="modal-footer">
+                  
+                  <button type="button" class="btn btn-warning" id="go_sign_in">提交</button>
+                </div>
               </div>
-        </div>
-        </div>
-
-        <div class=" d-flex justify-content-evenly w-100 mt-3 mx-0" style="background-color: rgb(233, 220, 203);">
-          <div class="">
-            <p class="fs-4 fw-bold">收錄資料筆數</p>
-            <p class="text-center fs-3 text-primary">2134</p>
-          </div>
-          
-          <div class="">
-            <p class="fs-4 fw-bold">資料貢獻人數</p>
-            <p class="text-center fs-3 text-primary">351</p>
+            </div>
           </div>
 
-          <div class="">
-            <p class="fs-4 fw-bold">救傷隻數</p>
-            <p class="text-center fs-3 text-primary">79</p>
-          </div>
+        <div class="d-flex justify-content-center ">
+            <table class="table bg-light" style="width: 60%; ">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">初步鑑定</th>
+                    <th scope="col">地點</th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td class="sp_name">Eutropis multifasciata</td>
+                    <td>台中市</td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#identi">鑑定</button></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td></td>
+                    <td></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#identi">鑑定</button></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td></td>
+                    <td></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#identi">鑑定</button></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td></td>
+                    <td></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#identi">鑑定</button></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td></td>
+                    <td></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#identi">鑑定</button></td>
+                  </tr>
+                </tbody>
+              </table>
+
         </div>
     </div>
 
@@ -217,6 +244,14 @@
         location.reload();
         
       })
+    </script>
+
+    <script>
+      $.get(
+        '/identi/table',function(info){
+          console.log(info)
+        }
+      )
     </script>
 </body>
 
