--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>目擊回報</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    
@@ -231,6 +231,7 @@
             // console.log($('#photo')[0].files[0])
             var form = new FormData()
             form.append('file',$('#photo')[0].files[0])
+            form.append('account_id',sessionStorage.getItem('login_account'))
             form.append('sp_name',$('#sp_name').val())
             form.append('time',$('#time').val())
             form.append('location',$('#location').val())
